# vfx-mcp

./: .gitignore  .opencode.json  AGENTS.md  CLAUDE.md  README.md  flake.nix  main.py  main_original.py  package-lock.json  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: yv1g4lwbxi3hjb7kwrkazm79czvk2fkz-source
.github/workflows/: cd.yaml  ci.yaml  claude-code-review.yml  claude.yml  docs.yaml  docs.yml
docs/: README.md  astro.config.mjs  bun.nix  flake.nix  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/styles/: custom.css
examples/: montage.py  web_process.py
mechanical-matter/: astro.config.mjs  package.json
src/: __init__.py
src/resources/: __init__.py
src/tools/: __init__.py
src/utils/: __init__.py
src/vfx_mcp/core/: server.py  utilities.py  validation.py
src/vfx_mcp/resources/: mcp_endpoints.py  mcp_endpoints.pyi
src/vfx_mcp/tools/: advanced_compositing.py  audio_processing.py  basic_video_ops.py  basic_video_ops.pyi  batch_automation.py  batch_automation.pyi  format_conversion.py  format_conversion.pyi  text_animation.py  text_animation.pyi  video_analysis.py  video_analysis.pyi  video_effects.py  video_transitions.py  video_transitions.pyi
tests/: __init__.py  conftest.py  test_advanced_operations.py  test_basic_operations.py  test_e2e_audio_processing.py  test_e2e_basic_video.py  test_e2e_format_conversion.py  test_e2e_mcp_resources.py  test_e2e_video_effects.py  test_end_to_end.py  test_mcp_protocol_verification.py  test_platform_compatibility.py  test_resource_verification.py  test_server_verification.py  test_server_verification_fixed.py  test_types.py  test_verification_summary.py
(+63 files in other folders)
